<resources>
    <string name="app_name">CarDroid</string>
    <string name="overlay_permission_missing">Permission to display overlay is missing. Overlay is disabled.</string>
    <string name="write_settings_permission_missing">Permission to write system settings is missing. Screen control is disabled.</string>
    <string name="gps_permission_title">Permission to update GPS position missing</string>
    <string name="gps_permission_message">Please set CarDroid as mock location provider in debug options.</string>
    <string name="cc_off">OFF</string>
    <string name="unit_bytes_per_second">bps</string>
    <string name="unit_sentences_per_second">sps</string>
    <string name="unit_packets_per_second">pps</string>
    <string name="unit_hertz">Hz</string>
    <string name="unit_percent">%</string>
    <string name="save">Save</string>
    <string name="usb_status_preparing">Loading…</string>
    <string name="usb_status_connecting">Connecting to device…</string>
    <string name="usb_status_disconnecting">Disconnecting from device…</string>
    <string name="main_headline_active_features">Active Features</string>
    <string name="main_headline_inactive_features">Inactive Features</string>
    <string name="main_headline_stats">Status</string>
    <string name="main_headline_devices">Active Devices</string>
    <string name="main_devices">Active Devices</string>
    <string name="dashboard_stats_rules">%1$d Rules</string>
    <string name="dashboard_stats_devices">%1$d Active Devices</string>
    <string name="dashboard_stats_features">%1$d Active Features</string>
    <string name="dashboard_stats_variables">%1$d Variables</string>
    <string name="cansniffer_line"><b>%1$s</b> : %2$s</string>
    <string name="title_activity_settings">CarDroid Settings</string>
    <string name="pref_title_default_devices">Default Devices</string>
    <string name="pref_summary_default_devices">Configure default devices to use for each app feature</string>
    <string name="pref_title_default_device_car">Car Connection</string>
    <string name="pref_title_default_device_location">Location Emulation</string>
    <string name="pref_title_default_device_overlay">Overlay</string>
    <string name="pref_title_app_features">App features</string>
    <string name="pref_summary_app_features">Configure individual app features</string>
    <string name="pref_header_power">Compatibility Settings</string>
    <string name="pref_header_description_power">Adjust special settings for compatibility</string>
    <string name="pref_title_device_detection">Device Detection</string>
    <string name="pref_title_device_detection_delay">Start delay</string>
    <string name="pref_title_device_detection_timeout">Timeout</string>
    <string name="pref_header_overlay">Overlay</string>
    <string name="pref_header_description_overlay">Manage settings for quick car control overlay</string>
    <string name="pref_title_overlay_toggle">Show Overlay</string>
    <string name="pref_description_overlay_toggle">Show a permanent overlay for quick access to car controls</string>
    <string name="pref_title_overlay_reset_position">Reset position</string>
    <string name="pref_description_overlay_reset_position">Reset the overlays position to it\'s default</string>
    <string name="pref_title_overlay_volume">Volume controls</string>
    <string name="pref_title_overlay_volume_toggle">Enable volume controls</string>
    <string name="pref_description_overlay_volume_toggle_on">Adjust media volume by touching overlay bubble</string>
    <string name="pref_description_overlay_volume_toggle_off">Don\'t allow adjusting media volume from overlay</string>
    <string name="pref_title_overlay_volume_touch_duration">Touch duration</string>
    <string name="pref_description_overlay_volume_touch_duration">Touch bubble for %1$dms to adjust media volume</string>
    <string name="pref_title_overlay_volume_steps">Number of steps</string>
    <string name="pref_description_overlay_volume_steps">Adjust volume in %1$d steps</string>
    <string name="pref_title_overlay_temperature_range">Temperature range</string>
    <string name="pref_title_overlay_temperature_min">Temperature minimum</string>
    <string name="pref_description_overlay_temperature_min">Minimum allowed value of temperature adjustment</string>
    <string name="pref_title_overlay_temperature_max">Temperature maximum</string>
    <string name="pref_description_overlay_temperature_max">Maximum allowed value of temperature adjustment</string>
    <string name="pref_title_overlay_fan_range">Fan range</string>
    <string name="pref_title_overlay_fan_max">Fan maximum</string>
    <string name="pref_description_overlay_fan_max">Maximum level of blower fan adjustment</string>
    <string name="pref_title_overlay_demo">Demonstration tools</string>
    <string name="pref_title_overlay_demo_show">Show demonstration overlay</string>
    <string name="pref_description_overlay_demo_show">Shows an interactive demonstration of the overlay</string>
    <string name="pref_header_car">Car connection</string>
    <string name="pref_header_description_car">Manage the USB connection to your car</string>
    <string name="pref_title_car_bandwidth">Bandwidth</string>
    <string name="pref_title_car_packets">Packets</string>
    <string name="car_stats_bandwidth">Current: %1$dbps / Avg: %2$dbps (%3$d%%) / Usage: %4$d%%</string>
    <string name="car_stats_packets">Current: %1$dpps / Avg: %2$dpps (%3$d%%)</string>
    <string name="pref_title_car_monitor">Car monitor</string>
    <string name="pref_description_car_monitor">View status of Carduino connection</string>
    <string name="pref_title_can_sniffer">CAN Sniffer</string>
    <string name="pref_description_can_sniffer">Directly read CAN packets from the car</string>
    <string name="pref_header_gps">GPS</string>
    <string name="pref_header_description_gps">Configure an external GPS device</string>
    <string name="pref_title_gps_monitor">GPS monitor</string>
    <string name="pref_description_gps_monitor">View status of external GPS receiver</string>
    <string name="pref_header_rules">Rules</string>
    <string name="pref_header_description_rules">Define rules for event based actionEntities</string>
    <string name="pref_header_devices">Devices</string>
    <string name="pref_header_description_devices">Manage connected devices</string>
    <string name="pref_title_device">Use Device</string>
    <string name="pref_device_none">None</string>
    <string name="status_unavailable">N/A</string>
    <string name="status_device">Device</string>
    <string name="status_device_none">None</string>
    <string name="status_connection">Connection</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_ups">Updates per second</string>
    <string name="status_bps">Serial bps</string>
    <string name="status_usage">Serial usage</string>
    <string name="status_usage_value">%1$d%%</string>
    <string name="status_statistics_value">%1$d%2$s (avg %3$d%2$s)</string>
    <string name="gps_status">Status</string>
    <string name="gps_raw_data">Raw data</string>
    <string name="gps_status_time">Time</string>
    <string name="gps_status_fix">GPS fix</string>
    <string name="gps_status_fix_1">No fix</string>
    <string name="gps_status_fix_2">2D fix</string>
    <string name="gps_status_fix_3">3D fix</string>
    <string name="gps_status_latitude">Latitude</string>
    <string name="gps_status_longitude">Longitude</string>
    <string name="gps_status_speed">Speed</string>
    <string name="gps_status_bearing">Bearing</string>
    <string name="gps_status_altitude">Altitude</string>
    <string name="gps_status_accuracy">Accuracy</string>
    <string name="gps_status_satellites_visible">Visible satellites</string>
    <string name="gps_status_satellites_used">Used satellites</string>
    <string name="gps_status_sps">Sentences per second</string>
    <string name="gps_status_frequency">Frequency</string>
    <string name="car_status">Status</string>
    <string name="car_connection">Connection</string>
    <string name="car_status_packets">Packets per second</string>
    <string name="car_status_variables">Registered variables</string>
    <string name="title_device_list">Devices</string>
    <string name="title_device_detail">Device %1$s</string>
    <string name="title_device_rename">Rename Device</string>
    <string name="device_name">Device Name</string>
    <string name="action_device_disconnect">Disconnect</string>
    <string name="action_device_disconnect_confirm">
        <![CDATA[
            <p>This will disconnect the device.</p>
            <p>The device will only be reconnected after a power-cycle.</p>
        ]]>
    </string>
    <string name="action_device_disconnect_success">Device %1$s successfully disconnected</string>
    <string name="action_device_disconnect_failure">Device %1$s could not be disconnected</string>
    <string name="action_device_reset">Reset</string>
    <string name="action_device_reset_confirm">
        <![CDATA[
            <p>This will reset the device to factory settings.</p>
            <ul>
                <li>The device will only be reconnected after a power-cycle.</li>
                <li>The device will be detected as a new device.</li>
                <li>All user settings associated to the device will not be associated to it anymore.</li>
            </ul>
        ]]>
    </string>
    <string name="action_device_reboot">Reboot</string>
    <string name="action_device_reboot_confirm">
        <![CDATA[
            <p>This will reboot the device.</p>
            <ul>
                <li>Some devices might require a power-cycle to reconnect.</li>
                <li>During operation this can lead to unexpected behaviour.</li>
            </ul>
        ]]>
    </string>
    <string name="action_device_delete">Delete</string>
    <string name="action_device_delete_confirm">
        <![CDATA[
            <p>This will delete the device.</p>
            <ul>
                <li>All user settings associated to the device will not be associated to it anymore.</li>
                <li>All device settings will be lost.</li>
                <li>The device will be detected as new device on next connection.</li>
            </ul>
        ]]>
    </string>
    <string name="action_device_delete_success">Device %1$s successfully deleted</string>
    <string name="action_device_rename">Rename</string>
    <string name="device_features">Device Features</string>
    <string name="error_device_name_blank">Device name cannot be blank</string>
    <string name="title_rule_list">Rules</string>
    <string name="edit_rule">Edit Rule</string>
    <string name="event_name">Event name</string>
    <string name="add_action">Add Action</string>
    <string name="edit_action">Edit Action</string>
    <string name="action_saved">Action successfully saved!</string>
    <string name="action_deleted">Action deleted!</string>
    <string name="event_unknown">Unknown event (%1$d)</string>
    <string name="event_1">Device ready</string>
    <string name="event_2">Device closing</string>
    <string name="media_key_action">Media Key</string>
    <string name="action_mediakey_key_code">Key</string>
    <string name="action_mediakey_play">Play</string>
    <string name="action_mediakey_pause">Pause</string>
    <string name="action_mediakey_play_pause">Play/Pause</string>
    <string name="action_mediakey_previous">Previous</string>
    <string name="action_mediakey_next">Next</string>
    <string name="volume_adjust_action">Audio Volume</string>
    <string name="action_volume_stream">Stream</string>
    <string name="action_volume_notification">Notifications</string>
    <string name="action_volume_alarm">Alarm</string>
    <string name="device_type">Device Type</string>
</resources>