<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:fragment="de.jlab.cardroid.SettingsActivity$OverlayPreferenceFragment"
        android:icon="@drawable/ic_pref_overlay"
        android:title="@string/pref_header_overlay"
        android:summary="@string/pref_header_description_overlay" />

    <header
        android:fragment="de.jlab.cardroid.SettingsActivity$CarPreferenceFragment"
        android:icon="@drawable/ic_pref_car"
        android:title="@string/pref_header_car"
        android:summary="@string/pref_header_description_car" />

    <header
        android:icon="@drawable/ic_pref_devices"
        android:title="@string/pref_header_devices"
        android:summary="@string/pref_header_description_devices">
        <intent android:targetPackage="de.jlab.cardroid"
            android:targetClass="de.jlab.cardroid.devices.ui.DeviceActivity" />
    </header>

    <header
        android:icon="@drawable/ic_pref_rules"
        android:title="@string/pref_header_rules"
        android:summary="@string/pref_header_description_rules">
        <intent android:targetPackage="de.jlab.cardroid"
                android:targetClass="de.jlab.cardroid.rules.RuleActivity" />
    </header>

    <header
        android:icon="@drawable/ic_pref_devices"
        android:title="@string/pref_camera"
        android:summary="@string/pref_camera_description">
        <intent android:targetPackage="de.jlab.cardroid"
            android:targetClass="de.jlab.cardroid.camera.ui.CameraViewActivity" />
    </header>

    <header
        android:fragment="de.jlab.cardroid.SettingsActivity$GpsPreferenceFragment"
        android:icon="@drawable/ic_pref_gps"
        android:title="@string/pref_header_gps"
        android:summary="@string/pref_header_description_gps" />

    <header
        android:fragment="de.jlab.cardroid.SettingsActivity$PowerPreferenceFragment"
        android:icon="@drawable/ic_pref_power"
        android:title="@string/pref_header_power"
        android:summary="@string/pref_header_description_power" />

</preference-headers>
