<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="car_device_uid"
        android:title="@string/pref_title_device"
        />

    <Preference
        android:key="car_monitor"
        android:title="@string/pref_title_car_monitor"
        android:summary="@string/pref_description_car_monitor">
        <intent android:targetPackage="de.jlab.cardroid"
                android:targetClass="de.jlab.cardroid.car.ui.CarMonitorActivity"/>
    </Preference>

    <Preference
        android:key="car_can_sniffer"
        android:title="@string/pref_title_can_sniffer"
        android:summary="@string/pref_description_can_sniffer">
        <intent android:targetPackage="de.jlab.cardroid"
            android:targetClass="de.jlab.cardroid.car.ui.CanSnifferActivity"/>
    </Preference>

</PreferenceScreen>
