<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".devices.ui.DeviceDetailFragment">

    <TextView
        android:id="@+id/display_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/uid"
        app:layout_constraintEnd_toStartOf="@+id/margin_right"
        app:layout_constraintStart_toEndOf="@+id/type_icon"
        app:layout_constraintTop_toTopOf="@id/margin_top"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="My can device" />

    <TextView
        android:id="@+id/uid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        app:layout_constraintEnd_toStartOf="@+id/margin_right"
        app:layout_constraintStart_toEndOf="@+id/type_icon"
        app:layout_constraintTop_toBottomOf="@+id/display_name"
        tools:text="c4rdu1n0-AXN" />

    <ImageView
        android:id="@+id/type_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/device_type"
        app:layout_constraintBottom_toBottomOf="@+id/uid"
        app:layout_constraintStart_toStartOf="@+id/margin_left"
        app:layout_constraintTop_toTopOf="@+id/display_name"
        app:srcCompat="@drawable/ic_pref_devices" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margin_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <View
        android:id="@+id/detail_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uid" />

    <Button
        android:id="@+id/action_device_reboot"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableTop="@drawable/ic_action_device_reboot"
        android:text="@string/action_device_reboot"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/action_device_reset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/action_device_disconnect"
        app:layout_constraintTop_toBottomOf="@+id/detail_divider" />

    <Button
        android:id="@+id/action_device_disconnect"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableTop="@drawable/ic_action_device_disconnect"
        android:text="@string/action_device_disconnect"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/action_device_reboot"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/margin_left"
        app:layout_constraintTop_toBottomOf="@+id/detail_divider" />

    <Button
        android:id="@+id/action_device_reset"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableTop="@drawable/ic_action_device_reset"
        android:text="@string/action_device_reset"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/action_device_delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/action_device_reboot"
        app:layout_constraintTop_toBottomOf="@+id/detail_divider" />

    <Button
        android:id="@+id/action_device_delete"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableTop="@drawable/ic_action_device_delete"
        android:text="@string/action_device_delete"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/margin_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/action_device_reset"
        app:layout_constraintTop_toBottomOf="@+id/detail_divider" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/action_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="action_device_delete,action_device_disconnect,action_device_reset"
        tools:layout_editor_absoluteY="694dp" />

    <View
        android:id="@+id/action_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/action_barrier" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/device_features"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/margin_left"
        app:layout_constraintTop_toBottomOf="@+id/action_divider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/feature_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:itemCount="4"
        tools:listitem="@android:layout/simple_selectable_list_item" />


</androidx.constraintlayout.widget.ConstraintLayout>